--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -5739,16 +5739,15 @@ Iot Services CSS
     padding-bottom: 10rem;
 }
 .single-iot-services {
-    margin-bottom: 30px;
+    @include boxShadow;
+    border-radius: 3px;
     position: relative;
     z-index: 1;
     text-align: center;
-    background: $white-color;
-    border: 1px dashed #cdf1d8;
 
     .content{
-      border-style: solid;
-      border-color: $accent-color;
+        @include boxShadow;
+      border-radius: 3px;
       position: absolute;
       top: 0px;
       bottom: 0px;
@@ -5757,7 +5756,6 @@ Iot Services CSS
       opacity: 0;
       transition: .5s ease;
       background-image: $gradient-color;
-      padding-bottom: 30px;
       z-index: 500;
 
       &:hover  .text {
