--- a/src/assets/style/base/_typography.scss
+++ b/src/assets/style/base/_typography.scss
@@ -1,3 +1,89 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 $font-size: 14px;
 $font-family: 'Poppins', sans-serif;
+
+
+/*Section Title*/
+.section-title {
+    text-align: center;
+    margin-bottom: 60px;
+
+    h2 {
+        margin-bottom: 0;
+        text-transform: capitalize;
+        font: {
+            size: 36px;
+            weight: 600;
+        }
+    }
+    p {
+      font: {
+          size: 16px;
+          weight: 400;
+      }
+        margin: 0 auto;
+    }
+    .bar {
+        height: 5px;
+        width: 90px;
+        background: #cdf1d8;
+        margin: 20px auto;
+        position: relative;
+        border-radius: 30px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: -2.7px;
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            background: $accent-color-secondary;
+            animation-duration: 3s;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+            animation-name: MOVE-BG;
+        }
+    }
+    .sub-title {
+        display: inline-block;
+        color: $accent-color;
+        background-color: #f5dffd;
+        margin-bottom: 18px;
+        border-radius: 30px;
+        padding: 5px 20px 4px;
+        font-size: 13px;
+    }
+}
+@keyframes MOVE-BG {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(88px);
+    }
+}
+
+
+
+/*================================================
+Page Title CSS
+=================================================*/
+.page-title-area {
+    position: relative;
+    z-index: 1;
+    padding: {
+        top: 190px;
+        bottom: 100px;
+    }
+    text-align: center;
+
+    h2 {
+        font: {
+            size: 28px;
+            weight: 700;
+        }
+        margin: 0;
+    }
+}
