--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -20,6 +20,7 @@
 @import 'layout/services';
 @import 'layout/blog';
 @import 'layout/features';
+@import 'layout/contact';
 @import 'components/readytotalk';
 
 
