--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -19,6 +19,7 @@
 @import 'layout/funfacts';
 @import 'layout/services';
 @import 'layout/blog';
+@import 'layout/grid';
 @import 'layout/features';
 @import 'layout/contact';
 @import 'components/readytotalk';
