--- a/src/assets/style/responsive.scss
+++ b/src/assets/style/responsive.scss
@@ -330,6 +330,10 @@ $value_seven: 1550px;
         }
     }
 
+
+  
+
+
     .funfact {
         margin-bottom: 30px;
 
@@ -1542,6 +1546,8 @@ $value_seven: 1550px;
             transform: unset;
             text-align: center;
             margin-bottom: 15px;
+            left: 50%;
+            transform: translateX(-50%);
 
             h3 {
                 font-size: 17px;
